@@ -197,8 +197,8 @@ public class JvmObjectGen {
     }
 
     private boolean isListenerAttach(BIRNode.BIRFunction func) {
-        return func.name.value.equals("attach") &&
-                Symbols.isFlagOn(func.parameters.get(0).type.getFlags(), Flags.SERVICE);
+        return func.name.value.equals("attach") && Symbols.isFlagOn(func.parameters.getFirst().type.flags,
+                Flags.SERVICE);
     }
 
     public void createAndSplitGetMethod(ClassWriter cw, Map<String, BField> fields, String className,
